updated test method for mioc-top

--- a/mioc-top/makefile
+++ b/mioc-top/makefile
@@ -6,7 +6,6 @@ COMP  = $(shell which iverilog)
 RUN   = $(shell which vvp)
 WAVES = $(shell which )
 
-
 # Define variables
 #
 CWD = $(shell pwd)
@@ -14,13 +13,15 @@ CWD = $(shell pwd)
 RM = /usr/bin/rm
 MD = /usr/bin/mkdir
 
-#V_SRC = $(shell ls src/*.v 2>/dev/null)
 V_SRC = $(shell find ../. -name "*mioc*.v" 2>/dev/null)
 
-build : clean $(V_SRC) 
-	$(COMP) $(V_SRC) src/testbench.v 
+build : clean $(V_SRC)
+	$(COMP) $(V_SRC) tests/$(test)/testbench.v
 
 run :   build
+	@echo "Running test $(test)"
+	$(RM) -f DATA_OUT/*.*
+	$(RM) -f DATA_GOLD/*.*
 	$(RUN) a.out
 
 waves:  run
