added two types of wave dumping, for viewing, for tester

--- a/mioc-top/makefile
+++ b/mioc-top/makefile
@@ -16,10 +16,21 @@ TL = /usr/bin/tail
 
 V_SRC = $(shell find ../. -name "*mioc*.v" 2>/dev/null)
 
-build : clean $(V_SRC)
+
+# Build design
+#
+
+tester_build : clean $(V_SRC)
+	$(COMP) -DTESTER $(V_SRC) ./tests/$(test)/testbench.v
+
+waves_build : clean $(V_SRC)
 	$(COMP) $(V_SRC) ./tests/$(test)/testbench.v
 
-run :   build
+
+# Used for wave viewing
+#
+
+run :   waves_build
 	@echo "Running test $(test)"
 	$(RM) -f ./tests/$(test)/DATA_OUT/*.*
 	$(RUN) a.out
@@ -29,7 +40,18 @@ run :   build
 waves:  run
 	gtkwave ./tests/$(test)/DATA_OUT/waves.vcd ./tests/$(test)/waves.gtkw
 
-check:	run ./tests/$(test)/DATA_GOLD/waves.vcd ./tests/$(test)/DATA_OUT/waves.vcd 
+
+# Used for regression testing
+#
+
+tester_run :   tester_build
+	@echo "Running test $(test)"
+	$(RM) -f ./tests/$(test)/DATA_OUT/*.*
+	$(RUN) a.out
+	$(TL) -n +4 ./waves.vcd > ./tests/$(test)/DATA_OUT/tester.vcd 
+	$(RM) -f ./waves.vcd 
+
+check:	tester_run ./tests/$(test)/DATA_GOLD/tester.vcd ./tests/$(test)/DATA_OUT/tester.vcd 
 	$(eval ERRORS := $(shell diff ./tests/$(test)/DATA_OUT/waves.vcd  ./tests/$(test)/DATA_GOLD/waves.vcd | wc -l 2>/dev/null))
 	@echo "\n\nCompared DATA_OUT vcd to DATA_GOLD vcd"
 	@echo $(ERRORS) " errors found.\n"
