updated gitignore, to ignore xilinx volatile files

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,41 @@
 **/*.vcd
 **/*.xcf
 **/DATA_OUT/*.*
+
 !**/.empty
 !**/DATA_GOLD/tester.vcd
+
+**/_ngo/
+**/_xmsgs/ngdbuild.xmsgs
+**/_xmsgs/pn_parser.xmsgs
+**/_xmsgs/xst.xmsgs
+**/mioc_top.bld
+**/mioc_top.cmd_log
+**/mioc_top.gyd
+**/mioc_top.jed
+**/mioc_top.lso
+**/mioc_top.mfd
+**/mioc_top.nga
+**/mioc_top.ngc
+**/mioc_top.ngd
+**/mioc_top.ngr
+**/mioc_top.pad
+**/mioc_top.pnx
+**/mioc_top.prj
+**/mioc_top.rpt
+**/mioc_top.stx
+**/mioc_top.syr
+**/mioc_top.tim
+**/mioc_top.tspec
+**/mioc_top.vm6
+**/mioc_top.xml
+**/mioc_top.xst
+**/mioc_top_build.xml
+**/mioc_top_envsettings.html
+**/mioc_top_html/
+**/mioc_top_ngdbuild.xrpt
+**/mioc_top_pad.csv
+**/mioc_top_xst.xrpt
+**/webtalk_pn.xml
+**/xlnx_auto_0_xdb/
+**/xst/
